--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,13 @@
 spring:
   application:
     name: Springerator
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+    password: ${REDIS_PASSWORD}
+  cache:
+    type: redis
+
 server:
   port: 9001
   tomcat:
