--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   application:
     name: Springerator
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD}
+  data:
+    redis:
+      host: redis
+      port: 6379
+      password: springerator_redis_pass
   cache:
     type: redis
 
